# math-research-ide

./: .gitignore  CLAUDE.md  OVERVIEW.md  docker-compose.yml
server/: .dockerignore  .env.example  Dockerfile  ENV.md  alembic.ini  heaven_checkpoints.db-shm  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 001_initial_schema.py  002_add_upload_source_type.py  003_add_related_to_relationship_type.py
server/lean_project/: lake-manifest.json  lakefile.lean
server/lean_project/HEAVEN/: Basic.lean  tmp00r0e0n3.lean  tmp0120kmrm.lean  tmpg86i9wsf.lean
server/src/: config.py
server/src/api/: app.py  dependencies.py  schemas.py
server/src/api/routers/: agent.py  chat.py  concepts.py  discoveries.py  paper_discovery.py  papers.py  relationships.py  research.py  search.py  upload.py  verify.py
server/src/db/sqlite/: models.py  session.py
server/src/graph/: knowledge_graph.py
server/src/ingestion/: arxiv_client.py  exa_client.py  extractor.py  scholar_client.py  wolfram_client.py
server/src/model/extraction/: relationship_extractor.py
server/src/model/graphs/: agent_synthesis.py  checkpointer.py  discovery_graph.py  ingestion_graph.py  paper_discovery_graph.py  research_graph.py
server/src/model/providers/: base.py  (+1 more)
server/src/schemas/: models.py
server/src/verification/: lean.py  sympy_check.py
server/tests/api/: conftest.py  test_agent.py  test_chat.py  test_concepts.py  test_discoveries.py  test_health.py  test_papers.py  test_relationships.py  test_search.py  test_verify.py
server/tests/model/: test_agent_synthesis.py
(+53 files in other folders)
