[project]
name = "heaven"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # Vector DB
    "chromadb>=0.5",
    # Graph
    "networkx>=3.3",
    # Symbolic math & pre-verification
    "sympy>=1.13",
    "antlr4-python3-runtime>=4.11,<4.12",   # required by sympy's LaTeX parser
    # Data sources (on-demand fetching)
    "arxiv>=2.1",
    "wolframalpha>=5.0",
    "httpx>=0.27",
    # Embeddings (swappable when model layer is decided)
    "sentence-transformers>=3.0",
    # LLM provider
    "anthropic>=0.40",
    # Config & validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    # HTTP server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # Pipeline orchestration + checkpointing
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=1.0",
    # PDF text extraction
    "pymupdf>=1.24",
    # File upload support
    "python-multipart>=0.0.9",
    # MATLAB/Scientific computation agent
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    # Neural paper search
    "exa-py>=1.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
